--- a/Innovzen/res/layout-land/fragment_balance_exercise.xml
+++ b/Innovzen/res/layout-land/fragment_balance_exercise.xml
@@ -97,13 +97,18 @@
             android:background="#000000" />
 
         <LinearLayout
+            android:id="@+id/Settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <ImageView
+            <TextView
+                android:textSize="30sp"
+                android:gravity="center"
                 android:layout_width="240dp"
-                android:layout_height="100dp" />
+                android:layout_height="100dp"
+                android:text="Settings"
+                 />
 
             <View
                 android:layout_width="10dp"
