--- a/Innovzen/res/layout-land/fragment_time.xml
+++ b/Innovzen/res/layout-land/fragment_time.xml
@@ -1,27 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="900dp"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    
     android:layout_gravity="right"
     android:background="@drawable/main_background"
     android:orientation="vertical" >
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    
-    >
-    
-    <TextView 
-        android:background="@drawable/circular_seekbar_background_small"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        />
-</LinearLayout>
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    ></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+      <LinearLayout 
+          android:layout_marginTop="50dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="05"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+        
+       <LinearLayout 
+          android:layout_marginTop="50dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="10"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+         <LinearLayout 
+          android:layout_marginTop="50dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="15"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+         <LinearLayout 
+          android:layout_marginTop="40dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="20"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+        
+       <LinearLayout 
+          android:layout_marginTop="40dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="25"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+         <LinearLayout 
+          android:layout_marginTop="40dp"
+          android:layout_marginLeft="60dp"
+          android:gravity="center"
+          android:orientation="vertical"
+           android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:background="@drawable/circular_seekbar_background_small"
+          >
+        <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="30"
+           android:textSize="60sp"
+           android:textColor="#4F879A"
+            />
+         <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="20sp"
+           android:text="Min"
+           android:textColor="#4F879A"
+            />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
