--- a/Innovzen/res/layout-land/fragment_user_setting.xml
+++ b/Innovzen/res/layout-land/fragment_user_setting.xml
@@ -12,8 +12,8 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-             android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -38,8 +38,9 @@
             android:background="#000000" />
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:id="@+id/set_language"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -64,8 +65,9 @@
             android:background="#000000" />
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:id="@+id/set_time"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -86,12 +88,13 @@
 
         <View
             android:layout_width="10dp"
-           android:layout_height="170dp"
+            android:layout_height="170dp"
             android:background="#000000" />
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:id="@+id/set_graphic"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -110,19 +113,21 @@
                 android:src="@drawable/icon_timer" />
         </LinearLayout>
     </LinearLayout>
-<View 
-    android:layout_width="900dp"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
-<LinearLayout
+
+    <View
+        android:layout_width="900dp"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
+    <LinearLayout
         android:layout_width="900dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:id="@+id/set_music"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -147,8 +152,8 @@
             android:background="#000000" />
 
         <LinearLayout
-             android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -169,12 +174,12 @@
 
         <View
             android:layout_width="10dp"
-          android:layout_height="170dp"
+            android:layout_height="170dp"
             android:background="#000000" />
 
         <LinearLayout
             android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -186,7 +191,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-           <ImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -199,8 +204,8 @@
             android:background="#000000" />
 
         <LinearLayout
-           android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -212,26 +217,27 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-           <ImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:background="#B0CE45" />
         </LinearLayout>
     </LinearLayout>
-    <View 
-    android:layout_width="900dp"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
+
+    <View
+        android:layout_width="900dp"
+        android:layout_height="10dp"
+        android:background="#000000" />
+
     <LinearLayout
         android:layout_width="900dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <LinearLayout
-               android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -242,7 +248,8 @@
                 android:text="Oxygen"
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
-<ImageView
+
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -255,8 +262,8 @@
             android:background="#000000" />
 
         <LinearLayout
-             android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -268,7 +275,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-           <ImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -281,8 +288,8 @@
             android:background="#000000" />
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -294,7 +301,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-           <ImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -307,8 +314,8 @@
             android:background="#000000" />
 
         <LinearLayout
-              android:layout_width="220dp"
-                android:layout_height="100dp"
+            android:layout_width="220dp"
+            android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -320,11 +327,12 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-           <ImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:background="#B0CE45" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
