--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -1,71 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Desmond
-                可重用的左侧控件栏
--->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
+<!-- Desmond
+                可重用的左侧控件栏 -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" 
+    android:weightSum="13">
+    
+    <ImageView android:id="@+id/left_top"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="3"
+        android:background="#FFFFFF00"/>
+    
+    <ImageView android:id="@+id/left_mid"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="8"
+        android:layout_marginTop="@dimen/grid_gap"
+        android:layout_marginBottom="@dimen/grid_gap"
+        android:background="#FFFF00FF"/>
+        
+    <ImageView android:id="@+id/left_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="2"
+        android:background="#FF00FFFF"/>
 
-<com.innovzen.ui.MeasureView
-        android:id="@+id/left_mea_vertical_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        layout:orientation="true"
-        layout:rate_down="13"
-        layout:rate_up="3" />
-
-    <com.innovzen.ui.MeasureView
-        android:id="@+id/left_mea_vertical_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/left_mea_vertical_1"
-        layout:orientation="true"
-        layout:rate_down="13"
-        layout:rate_up="8" />
-
-    <com.innovzen.ui.MeasureView
-        android:id="@+id/left_mea_vertical_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/left_mea_vertical_2"
-        layout:orientation="true"
-        layout:rate_down="13"
-        layout:rate_up="2" />
-
-     <ImageView
-        android:id="@+id/left_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/left_mea_vertical_1"
-        android:layout_alignTop="@id/left_mea_vertical_1"
-        android:layout_alignParentLeft="true"
-        android:background="#FFFFFF00"
-        android:padding="@dimen/grid_half_gap" />
-
-    <ImageView
-        android:id="@+id/left_mid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/left_mea_vertical_2"
-        android:layout_alignTop="@id/left_mea_vertical_2"
-        android:layout_alignParentLeft="true"
-        android:background="#FFFF00FF"
-        android:padding="@dimen/grid_half_gap" />
-
-    <ImageView
-        android:id="@+id/left_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/left_mea_vertical_3"
-        android:layout_alignTop="@id/left_mea_vertical_3"
-        android:layout_alignParentLeft="true"
-        android:background="#FF00FFFF"
-        android:padding="@dimen/grid_half_gap" />
-
-</RelativeLayout>
+</LinearLayout>
