--- a/Innovzen/res/layout-land/fragment_balance_exercise.xml
+++ b/Innovzen/res/layout-land/fragment_balance_exercise.xml
@@ -97,18 +97,13 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:id="@+id/Settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <TextView
-                android:textSize="30sp"
-                android:gravity="center"
+            <ImageView
                 android:layout_width="240dp"
-                android:layout_height="100dp"
-                android:text="Settings"
-                 />
+                android:layout_height="100dp" />
 
             <View
                 android:layout_width="10dp"
