--- a/Innovzen/res/layout-land/fragment_user_setting.xml
+++ b/Innovzen/res/layout-land/fragment_user_setting.xml
@@ -12,8 +12,8 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+             android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -38,9 +38,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:id="@+id/set_language"
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -65,9 +64,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:id="@+id/set_time"
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -88,13 +86,12 @@
 
         <View
             android:layout_width="10dp"
-            android:layout_height="170dp"
+           android:layout_height="170dp"
             android:background="#000000" />
 
         <LinearLayout
-            android:id="@+id/set_graphic"
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -113,21 +110,19 @@
                 android:src="@drawable/icon_timer" />
         </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="900dp"
-        android:layout_height="10dp"
-        android:background="#000000" />
-
-    <LinearLayout
+<View 
+    android:layout_width="900dp"
+    android:layout_height="10dp"
+    android:background="#000000"
+    />
+<LinearLayout
         android:layout_width="900dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/set_music"
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -152,8 +147,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+             android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -174,12 +169,12 @@
 
         <View
             android:layout_width="10dp"
-            android:layout_height="170dp"
+          android:layout_height="170dp"
             android:background="#000000" />
 
         <LinearLayout
             android:layout_width="220dp"
-            android:layout_height="100dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -191,7 +186,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-            <ImageView
+           <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -204,8 +199,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+           android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -217,27 +212,26 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-            <ImageView
+           <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:background="#B0CE45" />
         </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="900dp"
-        android:layout_height="10dp"
-        android:background="#000000" />
-
+    <View 
+    android:layout_width="900dp"
+    android:layout_height="10dp"
+    android:background="#000000"
+    />
     <LinearLayout
         android:layout_width="900dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+               android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -248,8 +242,7 @@
                 android:text="Oxygen"
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
-
-            <ImageView
+<ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -262,8 +255,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+             android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -275,7 +268,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-            <ImageView
+           <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -288,8 +281,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -301,7 +294,7 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-            <ImageView
+           <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -314,8 +307,8 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="100dp"
+              android:layout_width="220dp"
+                android:layout_height="100dp"
             android:orientation="vertical" >
 
             <TextView
@@ -327,12 +320,11 @@
                 android:textColor="#36A7B7"
                 android:textSize="16sp" />
 
-            <ImageView
+           <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:background="#B0CE45" />
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
