--- a/Innovzen/res/layout-land/fragment_time.xml
+++ b/Innovzen/res/layout-land/fragment_time.xml
@@ -5,23 +5,22 @@
     android:layout_gravity="right"
     android:background="@drawable/main_background"
     android:orientation="vertical" >
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    
-    >
-    
-    <TextView 
-        android:background="@drawable/circular_seekbar_background_small"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        />
-</LinearLayout>
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    ></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/circular_seekbar_background_small" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+    </LinearLayout>
 
 </LinearLayout>
