--- a/Innovzen/res/layout-land/fragment_voice.xml
+++ b/Innovzen/res/layout-land/fragment_voice.xml
@@ -1,42 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="900dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="right"
-    android:background="@drawable/main_background"
-    android:orientation="vertical" >
+<!-- chy音乐界面 -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:gravity="center"
-        android:text="Aquatic SunBean"
-        android:textColor="#36A7B7"
-        android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:gravity="center"
-        android:text="Bondi Breath"
-        android:textColor="#36A7B7"
-        android:textSize="24sp" />
-<View
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:background="#000000"
-    />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:gravity="center"
-        android:text="Angelic Organ"
-        android:textColor="#36A7B7"
-        android:textSize="24sp" />
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/left_mea_vertical_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        layout:orientation="true"
+        layout:rate_down="3"
+        layout:rate_up="1" />
 
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/left_mea_vertical_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/left_mea_vertical_1"
+        layout:orientation="true"
+        layout:rate_down="3"
+        layout:rate_up="1" />
 
-</LinearLayout>
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/left_mea_vertical_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/left_mea_vertical_2"
+        layout:orientation="true"
+        layout:rate_down="3"
+        layout:rate_up="1" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/up_mea_Horizontal_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/left_mea_vertical_1"
+        layout:orientation="false"
+        layout:rate_down="28"
+        layout:rate_up="5" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/up_mea_Horizontal_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/up_mea_Horizontal_1"
+        layout:orientation="false"
+        layout:rate_down="28"
+        layout:rate_up="23" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_5"
+        android:layout_alignLeft="@id/up_mea_Horizontal_1"
+        android:layout_alignRight="@id/up_mea_Horizontal_1"
+        android:layout_alignTop="@id/left_mea_vertical_1"
+        android:background="#7CB148"
+        android:padding="@dimen/grid_half_gap" >
+
+        <include layout="@layout/reusable_lefter" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_1"
+        android:layout_alignLeft="@id/up_mea_Horizontal_2"
+        android:layout_alignRight="@id/up_mea_Horizontal_2"
+        android:layout_alignTop="@id/left_mea_vertical_1"
+        android:background="@color/main_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/grid_half_gap" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="@string/voice_man"
+            android:textColor="@color/voice_text"
+            android:textSize="@dimen/voice_text" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_2"
+        android:layout_alignLeft="@id/up_mea_Horizontal_2"
+        android:layout_alignRight="@id/up_mea_Horizontal_2"
+        android:layout_alignTop="@id/left_mea_vertical_2"
+        android:background="@color/main_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/grid_half_gap" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="@string/voice_woman"
+            android:textColor="@color/voice_text"
+            android:textSize="@dimen/voice_text" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/left_mea_vertical_3"
+        android:layout_alignLeft="@id/up_mea_Horizontal_2"
+        android:layout_alignRight="@id/up_mea_Horizontal_2"
+        android:layout_alignTop="@id/left_mea_vertical_3"
+        android:background="@color/main_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/grid_half_gap" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="@string/voice_slience"
+            android:textColor="@color/voice_text"
+            android:textSize="@dimen/voice_text" />
+    </LinearLayout>
+
+</RelativeLayout>
