--- a/Innovzen/res/values/colors.xml
+++ b/Innovzen/res/values/colors.xml
@@ -65,5 +65,10 @@
     <!-- Timer advance settings  -->
     <color name="tab_pressed">#e0e0e0</color>
     <color name="tab_selected">#ffffff</color>
-
+    <!-- chy -->
+    <!-- Voice text-->
+     <color name="voice_text">#69A6BD</color>
+     <!-- MainBackground -->
+     <color name="main_bg">#77BBC9</color>
+    <!-- chy -->
 </resources>
