--- a/Innovzen/res/layout-land/fragment_voice.xml
+++ b/Innovzen/res/layout-land/fragment_voice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- chy音乐界面 -->
+<!-- chy声音界面 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:layout="http://schemas.android.com/apk/res/com.innovzen.o2chair"
     android:layout_width="wrap_content"
