--- a/Innovzen/res/values/colors.xml
+++ b/Innovzen/res/values/colors.xml
@@ -67,8 +67,10 @@
     <color name="tab_selected">#ffffff</color>
     <!-- chy -->
     <!-- Voice text-->
+    <color name="frag_text">#69A6BD</color>
      <color name="voice_text">#69A6BD</color>
      <!-- MainBackground -->
      <color name="main_bg">#77BBC9</color>
+      <color name="main_bg2">#ffffff</color>
     <!-- chy -->
 </resources>
